<resources>
    <string name="app_name">Заметки</string>
    <string name="action_settings">Настройки</string>
    <string name="add_note">Добавить</string>
    <string name="modify_note">Изменить</string>
    <string name="chapter_title">Название заметки</string>
    <string name="category_title">Название категории</string>
    <string name="without_chapter_title">Без названия</string>
    <string name="chapter_content">Текст…</string>
    <string name="without_chapter_content">Без текста…</string>
    <string name="add">Добавить</string>
    <string name="add_in_bookmark">Добавить в избранное</string>
    <string name="save_note">Сохранить</string>
    <string name="delete_note">Удалить</string>
    <string name="search_by_list">Поиск по списку</string>
    <string name="night_mode">Ночной режим</string>
    <string name="grid_mode">Сетка</string>
    <string name="list_mode">Список</string>
    <string name="about_us">О нас</string>
    <string name="share">Поделиться</string>
    <string name="share_to">Поделиться через</string>
    <string name="exit">Выход</string>
    <string name="warning">Предупреждение</string>
    <string name="question_save_note">Сохранить заметку перед выходом?</string>
    <string name="question_save_changes">Сохранить изменения перед выходом?</string>
    <string name="question_delete_note">Удалить заметку?</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="not_save">Не сохранять</string>
    <string name="slash"> / </string>
    <string name="note_added">Заметка добавлена</string>
    <string name="category_added">Категория добавлена</string>
    <string name="category_renamed">Категория переименована</string>
    <string name="category_deleted">Категория удалена</string>
    <string name="note_change">Заметка изменена</string>
    <string name="note_deleted">Заметка удалена</string>
    <string name="first_note_added">Добавьте первую заметку</string>
    <string name="first_category_added">Добавьте первую категорию</string>
    <string name="first_bookmark_added">Добавьте первую закладку</string>
    <string name="category_name">Название категории</string>
    <string name="new_category_name">Новое название категории</string>
    <string name="menu_state">⋮</string>
    <string name="add_category">Добавить категорию</string>
    <string name="rename">Переименовать</string>
    <string name="rename_category">Переименовать категорию</string>
    <string name="delete_category_t">Удаление категории</string>
    <string name="delete_category_q">Удалить категорию?</string>
    <string name="drop_table_if_exists">DROP TABLE IF EXISTS</string>

    <string name="about_us_text">

        <b>JMApps</b> — серия бесплатных андроид-приложений для мусульман.
        Наши приложения всегда будут <b>бесплатными</b> и <b>без</b> какой-либо <b>рекламы</b>.\n \n
        Вы можете следить за обновлением старых и изданием новых приложений в нашей группе в ВКонтакте:\n
        www.vk.com/JMApps и на нашем канале в Telegram:\n t.me/JMApps. \n\n
        Если же у вас возникнут вопросы, или появятся предложения или критика, можете написать нам
        на почту: jmappsmuslim@gmail.com, или в Telegram: t.me/JMbikk

    </string>
    <string name="title_activity_modify_category_note">ModifyCategoryNoteActivity</string>
    <string name="title_activity_add_category_note">AddCategoryNoteActivity</string>
</resources>
