<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="jmapps.simplenotes.MainActivity">
    <item
        android:id="@+id/action_add_bookmark"
        android:checkable="true"
        android:icon="@drawable/ic_bookmark_border"
        android:orderInCategory="1"
        android:title="@string/add_in_bookmark"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share_note"
        android:icon="@drawable/ic_share"
        android:orderInCategory="1"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_modify_note_save"
        android:icon="@drawable/ic_save"
        android:orderInCategory="1"
        android:title="@string/save"
        app:showAsAction="always" />
</menu>
